--- a/style.css
+++ b/style.css
@@ -240,6 +240,10 @@ h2{
   background-color: whitesmoke;
   box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.1);
 }
+
+.prize-div > div{
+  background-color: white;
+}
 .detail-img{
   width:5rem;
 }
@@ -328,8 +332,29 @@ h2{
       opacity: 0;
   }
 }
+.blink-small {
+  animation: blinker 1.8s linear infinite;
+  font-size: 1rem;
+  font-weight:200;
+  font-family: 'PT Sans', sans-serif;
+  margin-bottom:2rem;
+  background-color: #0d4ba0;
+  padding: 10px;
+  border-radius: 5px;
+  color: white;
+}
+@keyframes blinker {
+  50% {
+      opacity: 0;
+  }
+}
+
 .theme{
   color:#0d4ba0;
+  font-size: medium;
+}
+.prize-amt{
+  font-size: 2rem;
 }
 .s{
   text-decoration: line-through;
@@ -338,14 +363,23 @@ h2{
 .prize-div{
   display: flex;
   justify-content: space-evenly;
-  gap:0.2rem;
+  gap:0.5rem;
 
 }
 .prize-div > div{
   border: 1px solid #dcdcdc;
-  font-size: 0.9rem;
+  font-size: 1rem;
   padding: 1rem;
   border-radius: 5px;
+}
+@media screen and (max-width: 1100px) {
+  .prize-div{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    gap:0.5rem;
+  
+  }
 }
 @media screen and (max-width: 890px) {
   .nav-links{
