--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 /* Google Font Import Link */
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&family=Ubuntu:wght@400;500;700&display=swap');  
 @import url('https://fonts.googleapis.com/css2?family=PT+Sans:ital,wght@1,700&family=Poppins:ital,wght@1,300&family=Roboto+Condensed&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=PT+Sans:ital,wght@1,500&family=Poppins:ital,wght@1,300&family=Roboto+Condensed&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@600&display=swap');
 *{
   margin: 0;
   padding: 0;
@@ -133,6 +135,12 @@ h2{
 }
 .vivid-text{
   text-align: center;
+}
+.sponsor-image-container{
+  display: flex;
+  justify-content: space-evenly;
+  gap: 10rem;
+  margin-bottom: 1rem;
 }
 
 .card-container{
@@ -348,7 +356,11 @@ h2{
       opacity: 0;
   }
 }
-
+.vivid-sponsor{
+  color: white;
+  font-family: 'Oswald', sans-serif;
+  font-size: 2.5rem;
+}
 .theme{
   color:#0d4ba0;
   font-size: medium;
@@ -428,6 +440,9 @@ h2{
   .card-container{
     flex-direction: column;
     
+  }
+  .sponsor-image-container{
+    flex-direction: column;
   }
   .organizers{
     flex-direction: column;
