--- a/style.css
+++ b/style.css
@@ -41,6 +41,11 @@ nav{
 }
 .logo-container{
   margin-left:5rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+
 }
 .nav-links{
   gap:1rem;
